<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg8"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_close"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/close_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/abt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fab_title"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:shadowColor="#6A92FF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fab"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        android:shadowRadius="5"
        android:shadowColor="#6A92FF"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>