<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A640275"
    tools:context=".GuideContent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_close"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/close_button"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/close"
            android:layout_marginHorizontal="20dp"
            android:text="@string/gt1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:shadowRadius="5"
            android:shadowColor="#FF1744"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:justificationMode="inter_word"
            android:lineSpacingMultiplier="1.2"
            android:shadowColor="#FF1744"
            android:shadowRadius="5"
            android:text="@string/gt11"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>